--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="hidden p-6 overflow-y-auto md:block">
+<div class="hidden p-6 overflow-y-auto lg:block">
   <div class="w-full flex flex-col items-center">
     <a href="/" class="flex-shrink-0 flex flex-col items-center">
       <img class="h-6 w-auto mb-1" src="/favicon.png" alt="utf9k">
