--- a/layouts/partials/mobilemenu.html
+++ b/layouts/partials/mobilemenu.html
@@ -1,4 +1,4 @@
-<div class="md:hidden pl-3 pt-3">
+<div class="lg:hidden pl-3 pt-3">
   <button id="mobileMenuToggle" type="button" class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 dark:hover:text-gray-200 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
     <span class="sr-only">Open sidebar</span>
     <!-- Heroicon name: outline/menu -->
