--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
-* {
+/* Some items adapted from https://www.joshwcomeau.com/css/custom-css-reset */
+
+*, *::before, *::after {
   box-sizing: border-box;
+}
+
+* {
   margin: 0;
 }
 
@@ -9,7 +14,10 @@
   --user-font-scale: 1rem - 16px;
   font-size: clamp(0.875rem, 0.4626rem + 1.0309vw + var(--user-font-scale), 1.125rem);
   --color-light: #f3f4f6;
-  --color-light: #1f2937;
+}
+
+html, body {
+  height: 100%;
 }
 
 body {
@@ -17,6 +25,7 @@ body {
   width: 100%;
   min-height: 100vh;
   display: grid;
+  line-height: 1.5;
   justify-content: center;
   background: #f9fafb;
   color: #111827;
@@ -33,6 +42,19 @@ a {
   color: inherit;
 }
 
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
 header > div {
   font-size: clamp(2rem, -0.4742rem + 6.1856vw, 2.75rem);
 }
@@ -47,6 +69,7 @@ header h1 {
   font-size: 1em;
   font-weight: 500;
 }
+
 header img {
   width: 2em;
   height: 2.667em;
