--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ svg {
 
 #home-wrapper {
   display: grid;
-  gap: clamp(3rem, 1rem, 6rem);
+  gap: clamp(1rem, 4rem, 10rem);
 }
 
 #welcome-message {
@@ -122,6 +122,29 @@ svg {
   height: auto;
 }
 
+#recent-updates #post-stream {
+  margin-top: 1rem;
+}
+
+#recent-updates hr {
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1.7px;
+  margin: 1.2rem auto;
+  width: 10rem;
+}
+
+#post-stream ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+}
+
+#post-stream li {
+  list-style: none;
+  text-align: center;
+}
+
 /* Live player */
 
 #liveplayer {
@@ -131,5 +154,5 @@ svg {
 /* Footer */
 
 footer, footer img, footer p, footer svg {
-  display: inline-block;
+  opacity: 0;
 }
