Clean up some typography

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-<article class="mx-auto prose dark:prose-dark">
+<article>
   <header>
     <h1>{{ .Title }}</h1>
-    <div class="text-gray-500 text-xs font-medium uppercase tracking-wide pt-2">
+    <div id="post-meta">
       <time datetime="{{ .Date }}">{{ if .Draft }}This is an unpublished draft{{ else }}{{ .Date.Format "January 2, 2006" }}{{ end }}</time> {{ if .Draft }} · <time datetime="{{ .Date }}">Last modified {{ .Lastmod.Format "January 2, 2006" }}{{ end }}</time> · Around {{ .ReadingTime }} minute{{ if ne .ReadingTime 1 }}s{{ end }}
     </div>
   </header>
