--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,12 +68,23 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
-header {
+h1 {
+  font-size: 2.25em;
+  font-weight: 800;
+  line-height: 1.11;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: clamp(1.5rem, 1rem + 1.25vw, 2rem);
+}
+
+header.navigation {
   display: flex;
   padding: .8rem;
 }
 
-header a {
+header.navigation a {
   display: flex;
   height: fit-content;
   flex-direction: row;
@@ -81,40 +92,43 @@ header a {
   width: 100%;
 }
 
-header a span {
+header.navigation a span {
   font-size: 1em;
   font-weight: 500;
   margin-left: .5rem;
 }
 
-header a img {
+header.navigation a img {
   height: 1.4rem;
   width: 1.4rem;
 }
 
-header nav {
+header.navigation nav {
   display: flex;
   list-style: none;
 }
 
-header nav a {
+header.navigation nav a {
   padding-left: 0.rem;
 }
 
-header nav span {
+header.navigation nav span {
   color: var(--text-light);
   padding: 0 0.3rem;
 }
 
 @media (prefers-color-scheme: dark) {
-  header nav span {
+  header.navigation nav span {
     color: var(--text-dark);
   }
 }
 
-h2 {
+header #post-meta {
+  font-size: .75rem;
   font-weight: 500;
-  font-size: clamp(1.5rem, 1rem + 1.25vw, 2rem);
+  letter-spacing: .025em;
+  line-height: 1rem;
+  text-transform: uppercase;
 }
 
 footer a {
@@ -124,6 +138,14 @@ footer a {
 svg {
   height: 1.25rem;
   width:  1.25rem;
+}
+
+pre {
+  border-radius: 0.375rem;
+  font-size: .875em;
+  line-height: 1.7;
+  overflow-x: auto;
+  padding: 0.8rem 1.1rem;
 }
 
 /* Homepage */
@@ -174,7 +196,7 @@ svg {
 /* Live player */
 
 #liveplayer {
-  opacity: 0;
+  /*opacity: 0;*/
 }
 
 #liveplayer #progress {
@@ -184,7 +206,12 @@ svg {
 /* Posts */
 article #post-body {
   margin: 0 auto;
-  max-width: 450px;
+  max-width: 60ch;
+  padding-top: 1.3rem;
+}
+
+article .hidden { /* TODO: Change this to rss-only */
+  display: none;
 }
 
 article #post-body p,
@@ -229,6 +256,51 @@ article .heading h5,
 article .heading h6 {
   display: inline-block;
   vertical-align: middle;
+}
+
+article .highlight {
+  margin-bottom: 1.3rem;
+}
+
+article p code {
+  background-color: var(--bg-dark);
+  color: var(--text-light);
+  font-family: inherit;
+  font-size: .75rem;
+  font-weight: 500;
+  letter-spacing: .025em;
+  line-height: 1rem;
+  padding: 0.2rem 0.3rem;
+}
+
+@media (prefers-color-scheme: dark) {
+  article p code {
+    background-color: var(--bg-light);
+    color: var(--text-dark);
+  }
+}
+
+/* Notices */
+.notice {
+  background-color: var(--text-light);
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.6;
+  margin-bottom: 1.3rem;
+  padding: 1rem 1.6rem;
+}
+
+article #post-body .notice h2,
+article #post-body .notice h3,
+article #post-body .notice p {
+  margin-bottom: .5rem;
+}
+
+@media (prefers-color-scheme: dark) {
+  .notice {
+    background-color: var(--text-dark);
+  }
 }
 
 /* Footer */
