--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,13 +1,13 @@
 {{ define "main" }}
 <article class='{{ if isset .Params "maxwidth" }}max-w-full{{ end }} {{ if not (isset .Params "noproseclass") }}mx-auto prose dark:prose-dark{{ end }}'>
   <div class='{{ if isset .Params "maxwidth" }}fake-regular-width{{ end }}'>
-    <div class='{{ if isset .Params "noproseclass" }}prose dark:prose-dark mb-12{{ end }}'>
+    <div id="post-body" class='{{ if isset .Params "noproseclass" }}prose dark:prose-dark mb-12{{ end }}'>
       <h1>{{ .Title }}</h1>
       <div class="text-gray-500 text-xs font-medium uppercase tracking-wide pt-2">
         {{ if (eq .Slug "now") }}<time>Last updated on {{ .Lastmod.Format "02 January 2006" }}</time>{{ end }}
       </div>
+      {{ .Content }}
     </div>
-    {{ .Content }}
   </div>
 </article>
 {{ end }}
