--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,14 +8,14 @@
     </div>
     <div id="recent-updates">
       <div id="liveplayer">
-        <h3 id="action"></h3>
-        <img src="https://i.scdn.co/image/ab67616d0000b273a1a897ee5e642da6d945bcd7" id="cover">
-        <strong id="source"></strong>
+        <h3 id="action">This is fine 🔥</h3>
+        <img src="/cover.png" id="cover">
+        <strong id="source">Hmm</strong>
         <br />
-        <i id="title"></i>
+        <i id="title">You shouldn't be able to see this!</i>
         <br />
           <div id="progress">
-            <i id="elapsed"></i> / <i id="duration"></i>
+            <i id="elapsed">00:00</i> / <i id="duration">59:59</i>
           </div>
       </div>
       <hr />
