--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="navigation">
   <a href="/" id="logo">
     <img src="/favicon.png" alt="utf9k" width="16px" height="16px">
     <span>utf9k</span>
