--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,10 +108,6 @@ header.navigation nav {
   list-style: none;
 }
 
-header.navigation nav a {
-  padding-left: 0.rem;
-}
-
 header.navigation nav span {
   color: var(--text-light);
   padding: 0 0.3rem;
@@ -123,12 +119,16 @@ header.navigation nav span {
   }
 }
 
-header #post-meta {
+#content header #post-meta {
   font-size: .75rem;
   font-weight: 500;
   letter-spacing: .025em;
   line-height: 1rem;
   text-transform: uppercase;
+}
+
+#content header {
+  padding-bottom: 1.3rem;
 }
 
 footer a {
@@ -204,10 +204,9 @@ pre {
 }
 
 /* Posts */
-article #post-body {
+article:not(.full) {
   margin: 0 auto;
   max-width: 60ch;
-  padding-top: 1.3rem;
 }
 
 article .hidden { /* TODO: Change this to rss-only */
