--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 <main class="mx-auto prose dark:prose-dark">
-  <h1>{{ .Title }}</h1>
+  <header>
+    <h1>{{ .Title }}</h1>
+  </header>
   <ul>
     {{ $years := .Scratch }}
     {{ range (where .Pages "Draft" false) }}
