--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,8 @@
 
 :root {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  font-size: 1rem;
-  --user-font-scale: 1rem - 16px;
-  font-size: clamp(0.875rem, 0.4626rem + 1.0309vw + var(--user-font-scale), 1.125rem);
+  --user-font-scale: .9rem - 16px;
+  font-size: clamp(0.6rem, 0.4626rem + 1.0309vw + var(--user-font-scale), .85rem);
   --text-light: #d0d1c7;
   --text-dark: #1e1e1e;
   --bg-light: #eaebe3;
