--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
-<main class="mx-auto prose dark:prose-dark">
-  <h1>{{ .Title }}</h1>
+<main>
+  <header>
+    <h1>{{ .Title }}</h1>
+  </header>
   <ul>
     <h2>Ongoing</h2>
     {{ range where .Pages "Params.ongoing" true }}
