--- a/layouts/questions/list.html
+++ b/layouts/questions/list.html
@@ -13,15 +13,7 @@
     <li id="{{ .Slug }}" class="question">
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
       {{ range .Params.tags }}
-        {{ $colours := slice "red" "yellow" "green" "blue" "indigo" "purple" "pink" }}
-        {{ $lightFriendlyNumbers := slice "200" "300" "400" }}
-        {{ $darkFriendlyNumbers := slice "700" "800" "900" }}
-        {{ $tagMd5Numbers := md5 . | replaceRE "[A-Za-z|7|8|9]" "$1" }}
-        {{ $numberMd5Range := $tagMd5Numbers | replaceRE "[3|4|5|6|7]" "$1" }}
-        {{ $randomColour := index $colours (int (substr $tagMd5Numbers -1)) }}
-        {{ $lightNumber := index $lightFriendlyNumbers (int (substr $numberMd5Range -1)) }}
-        {{ $darkNumber := index $darkFriendlyNumbers (int (substr $numberMd5Range -1)) }}
-        <span class="rounded-full py-1 px-2 bg-{{ $randomColour }}-{{ $lightNumber }} dark:bg-{{ $randomColour }}-{{ $darkNumber }} text-gray-800 dark:text-gray-100 font-bold text-xs text-white">{{ . }}</span>
+        <span>#{{ . }}</span>
       {{ end }}
     </li>
     {{ end }}
