--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,6 +4,7 @@
 {{ end -}}
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="theme-color" content="#eaebe3" />
+<meta name="theme-color" content="#1f2738" media="(prefers-color-scheme: dark)">
 <meta name="author" content="Marcus Crane" />
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
