--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,7 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="icon" type="image/png" href="/favicon.png" sizes="16x16">
 <link rel="canonical" href="{{ .Permalink | safeURL }}" />
+<link rel="apple-touch-icon" href="/favicon.png">
 <link rel="me" href="mailto:hello@utf9k.net" />
 <link rel="me" href="https://twitter.com/sentreh" />
 <link rel="me" href="https://github.com/marcus-crane" />
