Revamp books and games pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,6 +389,40 @@ form#search {
   margin-top: 1rem;
 }
 
+/* Grid lists */
+#post-body .grid-list ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat(3,minmax(40px,auto));
+  grid-gap: 20px;
+}
+
+@media only screen and (min-width: 1000px) {
+  #post-body .grid-list ul:not(.partial-list) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(4,minmax(40px,auto));
+    margin-left: -25%;
+    width: 150%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  #post-body .grid-list ul:not(.partial-list):not(.almost-full-list) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(6,minmax(40px,auto));
+    margin-left: -50%;
+    width: 200%;
+  }
+}
+
+#post-body > .grid-list ul > li {
+  padding-left: 0;
+}
+
+#post-body > .grid-list ul > li:before {
+  content: none;
+}
+
 /* Footnotes */
 #post-body hr {
   height: 16px;
