Cache header partial

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   {{ block "body" . }}
-    {{ partial "header.html" . }}
+    {{ partialCached "header.html" . }}
     <div id="content">
     {{ block "main" . }}{{ end }}
     </div>
