--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,7 +1,17 @@
-<figure>
-  <a href='{{ .Page.Permalink }}{{ .Get "src" }}'>
-    {{ $.Scratch.Set "hideDropShadow" (.Get "noshadow") }}
-    {{ $hideDropShadow := $.Scratch.Get "hideDropShadow" }}
-    <img src='{{ .Page.Permalink }}{{ .Get "src" }}' class="{{ if ne $hideDropShadow true }}shadow-md{{ end }}" alt='{{ trim .Inner "\n" }}' loading="lazy" />
-  </a>
-</figure>
+<center>
+  <figure>
+    {{ $.Scratch.Set "externalLink" false }}
+    {{ if in (.Get "src") "://" }}{{ $.Scratch.Set "externalLink" true }}{{ end }}
+    {{ $externalLink := $.Scratch.Get "externalLink" }}
+    <a href='{{ if ne $externalLink true }}{{ .Page.Permalink }}{{ end }}{{ .Get "src" }}'>
+      {{ $.Scratch.Set "hideDropShadow" (.Get "noshadow") }}
+      {{ $hideDropShadow := $.Scratch.Get "hideDropShadow" }}
+      <img
+        {{ if (.Get "style") }}style='{{ .Get "style" }}'{{ end }}
+        src='{{ if ne $externalLink true }}{{ .Page.Permalink }}{{ end }}{{ .Get "src" }}'
+        {{ if (trim .Inner "\n") }}alt='{{ trim .Inner "\n" }}'{{ end }}
+        loading="lazy"
+      />
+    </a>
+  </figure>
+</center>
