--- a/layouts/debug/single.html
+++ b/layouts/debug/single.html
@@ -1,10 +1,6 @@
 {{ define "main" }}
-<article class='{{ if isset .Params "maxwidth" }}max-w-full{{ end }} {{ if not (isset .Params "noproseclass") }}mx-auto prose dark:prose-dark{{ end }}'>
-  <div class='{{ if isset .Params "maxwidth" }}fake-regular-width{{ end }}'>
-    <div class='{{ if isset .Params "noproseclass" }}prose dark:prose-dark mb-12{{ end }}'>
-      <h1>{{ .Title }}</h1>
-    </div>
-    {{ .Content }}
-  </div>
+<article class='{{ if isset .Params "maxwidth" }}full{{ end }}'>
+  <h1>{{ .Title }}</h1>
+  {{ .Content }}
 </article>
 {{ end }}
