Add littlefoot for nicer footnotes

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,3 +34,5 @@
 {{ if ne .Site.IsServer }}
 <script defer data-api='https://utf9k.net/api/event' data-domain='utf9k.net' src='https://utf9k.net/statistician.js'></script>
 {{ end }}
+
+<link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
