--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,5 +13,12 @@
     </div>
   {{ end }}
   {{ block "script" . }}{{ end }}
+
+  {{ $targetPath := "js/footnotes.js" }}
+  {{ $defines := dict "process.env.NODE_ENV" `"production"` }}
+  {{ $opts := dict "targetPath" $targetPath "defines" $defines }}
+  {{ $built := resources.Get $targetPath | js.Build $opts | fingerprint }}
+  <script type="text/javascript" src="{{ $built.RelPermalink }}" integrity="{{ $built.Data.Integrity }}"></script>
+
 </body>
 </html>
