Wire up home and blog pages

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title or metadata.title }}</title>
+    <title>{{ title or metadata.title }} | utf9k</title>
     <meta name="description" content="{{ description or metadata.description }}">
 
     <meta name="generator" content="{{ eleventy.generator }}">
