--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -4,6 +4,24 @@
     <span>utf9k</span>
   </a>
   <nav>
-    <li><a href="/about">about</a></li>
+    <li>
+      <a href="/blog">Blog</a>
+    </li>
+    <span>//</span>
+    <li>
+      <a href="/projects">Projects</a>
+    </li>
+    <span>//</span>
+    <li>
+      <a href="/about">About</a>
+    </li>
+    <span>//</span>
+    <li>
+      <a href="/questions">Questions</a>
+    </li>
+    <span>//</span>
+    <li>
+      <a href="/rss.xml">RSS</a>
+    </li>
   </nav>
 </header>
