--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
 
     <meta name="generator" content="{{ eleventy.generator }}">
 
-    <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     {% include 'partials/header.njk' %}
