Port over gag list

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -17,7 +17,8 @@ layout: layouts/base.njk
         <header>
           <h3>Here's a random(ly generated) thought</h3>
         </header>
-        <p>Blah</p>
+        <p>{{ gags | random }}</p>
+        </ul>
       </center>
       <hr />
       <div id="post-stream">
