Prettify and compile JS

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,6 +9,7 @@
     <meta name="generator" content="{{ eleventy.generator }}">
 
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
   </head>
   <body>
     {% include 'partials/header.njk' %}
