--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -18,7 +18,6 @@ layout: layouts/base.njk
           <h3>Here's a random(ly generated) thought</h3>
         </header>
         <p>{{ gags | random }}</p>
-        </ul>
       </center>
       <hr />
       <div id="post-stream">
@@ -64,4 +63,5 @@ layout: layouts/base.njk
     </div>
   </div>
 </article>
+<!-- Curious how my live player works? Check out the unminified source here: https://github.com/marcus-crane/utf9k/blob/main/assets/js/live-player.js -->
 <script type="text/javascript" src="/js/live-player.js"></script>
