--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -10,4 +10,6 @@ templateClass: tmpl-post
   <div id="post-body">
     {{ content | safe }}
   </div>
-</div>
+</article>
+
+<script type="text/javascript" src="/js/footnotes.js"></script>
