--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
+    <link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
   </head>
   <body>
     {% include 'partials/header.njk' %}
